--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@cloudflare/workers-types": "^4.20240620.0",
         "@remix-run/dev": "^2.9.2",
         "@remix-run/fs-routes": "^2.15.1",
+        "@remix-run/node": "^2.15.1",
         "@remix-run/route-config": "^2.15.1",
         "@remix-run/testing": "^2.15.1",
         "@testing-library/react": "^14.3.1",
